--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -143,7 +143,7 @@
         <h1>GitHub</h1>
         <p>You can view my coding projects on my GitHub profile here:
           <br>
-          <p class="center"><a href="https://github.com/MoeCondones" target="_blank">Mohameds GitHub</a></p>
+          <p class="center"><a href="https://github.com/MoeCondones" target="_blank">Mohamed's GitHub</a></p>
         </p> 
       </div>
     <!-- right column -->
